--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,61 @@
 #fslink {
-    color: #ff4719;
+color : #ff4719;
 }
-
 #input {
-    margin: 10px 0 5px 5px;
-    width: 14em;
-    height: 35px;
-    font-size: 17px;
-    font-family: Times, sans-serif;
-    border: none;
-    -webkit-box-shadow: 2px 2px 5px #6A5ACD;
-    outline: none;
-    position: absolute;
+margin : 10px 0 5px 5px;
+width : 14em;
+height : 35px;
+font-size : 17px;
+font-family : Times, sans-serif;
+border : none;
+outline : none;
+position : absolute;
 }
 #search-bar {
-    position: fixed;
-    top:0;
-    z-index: 3;
+position : fixed;
+top : 0;
+z-index : 3;
 }
 #search-container {
-    position: absolute;
-    z-index: 3;
-    margin-top: 50px;
+position : absolute;
+z-index : 3;
+margin-top : 50px;
 }
-
 #search-nav {
-    width: 230px;
-    max-height: 250px;
-    background-color: rgba(256,256,256,.8);
-    overflow: scroll;
+width : 230px;
+max-height : 250px;
+background-color : rgba(255, 255, 255, 0.8);
+overflow : scroll;
 }
-
 #scroller {
-    max-height: 250px;
-    overflow: scroll;
-    margin: 0 5px;
+max-height : 250px;
+overflow : scroll;
+margin : 0 20px;
 }
-
-#arrow-container {
-    background-color: rgba(256,256,256,.8);
-    max-width: 45px;
-    top: 0;
+.reset-container {
+position : absolute;
+z-index : 2;
+width : 100%;
+bottom : 0;
+float : right;
 }
-
-@media screen and (max-width: 700px) and (orientation:landscape) {
-    #search-container {
-        display: none;
-    }
+#reset, #reset:focus {
+float : right;
+height : 60px;
+width : 60px;
+float : right;
+margin : 0 10px 15px 0;
+border-radius : 10%;
+background-color : #2e1f0f;
+opacity : 0.89999997615814208984375;
+font-size : 12px;
+color : white;
+outline : none;
 }
+#reset:hover {
+background-color : purple;
+color : #2e1f0f;
+outline : none;
+}
+@media screen and (max-width:700px) and (orientation:landscape) {
+{
